Fix iOS background blend. Fix landscape header cut off.

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -10,7 +10,5 @@ body {
     padding: 0;
     font-family: Rubik, Arial, Helvetica, sans-serif;
     background-image: url('../wwwroot/images/bg_texture.png');
-    background-color: #0C091D;
-    background-blend-mode: soft-light;
     background-attachment: fixed;
 }
